--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "express": "3.4.8",
     "jade": "*",
     "lodash-node": "^2.4.1",
-    "webrtc.io": "0.0.4"
+    "webrtc.io": "0.0.4",
+    "winston": "^0.7.3"
   }
 }
